fix the Tacos Herzo h1 from wrapping into two lines of text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,8 @@ header h1 {
     letter-spacing: 2px;
     color: black;
     margin-left: 1rem;
+    /* Avoid "Tacos Herzo" wrapping into two lines */
+    white-space: nowrap;
 }
 
 #nav-menu {
